# battle-ia-lib-groupe1

./: README.md  build_run.sh  meson.build
include/: debug.h  display.h  main.h  move.h  radar.h  shoot.h  utils.h
src/: display.c  main.c  move.c  radar.c  shoot.c  utils.c
